# RetailDemandML

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  ML_FINISH_IMPLEMENTATION_PLAN.md  Makefile  PROJECT_PLAN.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  sample.yaml
notebooks/: 01_eda.ipynb
reports/: backtest_results.csv  data_metadata.json  drift_report.json  drift_report.md  drift_summary.csv  eda_report.md  eda_summary.json  feature_dictionary.md  feature_importance.csv  metrics.json  model_card.md  model_comparison.csv  real_data_verification.json  real_data_verification.md  sliced_metrics.csv
scripts/: run_pipeline.py
src/: __init__.py  config.py
src/api/: dashboard.py  main.py  schemas.py
src/data/: ingest.py  preprocess.py  validate.py  verify_real_dataset.py
src/features/: build_features.py  feature_store.py
src/models/: __init__.py  compare.py  evaluate.py  explain.py  registry.py  reports.py  train_baseline.py  train_xgboost.py  tune.py
src/monitoring/: drift.py
src/pipelines/: __init__.py  predict_batch.py
src/reports/: __init__.py  eda.py  feature_dictionary.py  feature_importance.py  plots.py
src/validation/: __init__.py  backtest.py
tests/: test_api.py  test_backtest.py  test_dashboard.py  test_docker.py  test_drift.py  test_features.py  test_metrics.py  test_preprocess.py  test_real_data_verification.py  test_registry.py  test_validation.py
