[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-demand-ml"
version = "0.1.0"
description = "Production-style retail demand forecasting platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "holidays>=0.50",
    "joblib>=1.3",
    "kaggle>=1.6",
    "mlflow>=2.12",
    "numpy>=1.24",
    "optuna>=3.6",
    "pandas>=2.0",
    "pandera>=0.20",
    "pydantic>=2.6",
    "scikit-learn>=1.3",
    "shap>=0.44",
    "uvicorn[standard]>=0.29",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "mypy>=1.10", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
